# DexDump

./: CMakeLists.txt  LICENSE  README.md
include/core/: DexContext.cpp  DexContext.h  DexDump.cpp  DexDump.h  DexFile.h  util.cpp  util.h
include/dex/: DexFile.cpp  DexFile.h
include/formatter/: BasePrint.cpp  BasePrint.h  ClassPrint.cpp  ClassPrint.h  CodePrint.cpp  CodePrint.h  DebugInfoPrint.cpp  DebugInfoPrint.h  FieldPrint.cpp  FieldPrint.h  FormatUtil.cpp  FormatUtil.h  HeaderPrint.cpp  HeaderPrint.h  MethodPrint.cpp  MethodPrint.h  ProtoPrint.cpp  ProtoPrint.h  StringPrint.cpp  StringPrint.h  TypePrint.cpp  TypePrint.h
include/log/: log.cpp  log.h
include/parser/: BaseParser.cpp  BaseParser.h  ClassDefsParser.cpp  ClassDefsParser.h  CodeParser.cpp  CodeParser.h  FieldParser.cpp  FieldParser.h  HeaderParser.cpp  HeaderParser.h  MethodParser.cpp  MethodParser.h  ProtoParser.cpp  ProtoParser.h  StringPoolParser.cpp  StringPoolParser.h  TypeParser.cpp  TypeParser.h
resources/: classes.dex
src/: Test.cpp  main.cpp
test/: dexdump_main.cpp
